feat: Accounts CRUD and ManyToOne/OneToMany relationships